# PetsAndPaws

api/: .env.example  pyproject.toml
api/src/: main.py  test_suite.py
api/src/db/: __init__.py  db_config.py  models.py
api/src/routes/: __init__.py  auth.py  ngo.py  pets.py
api/src/utils/: __init__.py  cloudinary_upload.py  config.py  security.py
client/: package-lock.json
client/app/: layout.tsx  page.tsx
client/app/auth/: layout.tsx  page.tsx
client/app/ngo/add-pet/: page.tsx
client/app/pets/[id]/: page.tsx
client/components/: navbar.tsx  pet-card.tsx
client/lib/: api.ts
