[project]
name = "pets-paws-api"
version = "0.1.0"
description = "Backend API for Pets & Paws adoption platform"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.109.0",
    "uvicorn>=0.27.0",
    "pydantic[email]>=2.5.0",
    "pymongo>=4.6.0",
    "python-multipart>=0.0.6",
    "requests>=2.32.5",
    "dotenv>=0.9.9",
    "cloudinary>=1.41.0",
    "python-dotenv>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
